--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,3 @@
-baseURL = "https://jonfreed256.github.io/"
+baseURL = "https://jonfreed256.github.io/hugo-day-001-intro/"
 languageCode = "en-us"
 title = "Intro"
