--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "index.html"
+baseURL = "https://jonfreed256.github.io/hugo-day-001-intro/"
 languageCode = "en-us"
 title = "Intro"
 theme = "stip"
@@ -16,4 +16,8 @@ theme = "stip"
         icon = "linkedin"
         title = "LinkedIn"
         url = "https://www.linkedin.com/in/jonathanwfreed/"    
-
+[[params.links]]
+        iconset = "fas"
+        icon = "envelope"
+        title = "E-mail"
+        url = "mailto:jon.freed@gmail.com"
